--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,21 @@
 cmake_minimum_required(VERSION 3.11)
-project(webrtc-client)
+project(rtc_handler)
 
 # Generate compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# Default options
+option(BUILD_STATIC_LIBS "Build example executables" ON)
+set(STATIC ${BUILD_STATIC_LIBS})
+option(BUILD_EXAMPLES "Build example executables" ON)
+set(EXAMPLES ${BUILD_EXAMPLES})
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
 # Dependencies
 include(FetchContent)
 
-find_package(libdatachannel QUIET)
+find_package(libdatachannel)
 if (NOT libdatachannel_FOUND)
     FetchContent_Declare(
         libdatachannel
@@ -39,17 +47,35 @@ if (NOT json-C_FOUND)
         GIT_SHALLOW false
     )
     FetchContent_GetProperties(json-c)
-    if (NOT libdatachannel_POPULATED)
+    if (NOT json-c_POPULATED)
         set(FETCHCONTENT_QUIET NO)
-        FetchContent_Populate(libdatachannel)
+        FetchContent_Populate(json-c)
         set(BUILD_STATIC_LIBS ON CACHE BOOL "" FORCE)
         set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
         add_subdirectory(${json-c_SOURCE_DIR} ${json-c_BINARY_DIR})
     endif()
 endif()
 
-file(GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
+file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+if (STATIC)
+    add_library(${PROJECT_NAME} STATIC ${SOURCES})
+else()
+    add_library(${PROJECT_NAME} SHARED ${SOURCES})
+endif()
 
 target_link_libraries(${PROJECT_NAME} datachannel json-c uuid ncurses)
+
+file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.c")
+
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
+
+# Build examples
+if (EXAMPLES)
+    foreach(SOURCE_FILE ${SRC_FILES})
+        get_filename_component(EXE_NAME ${SOURCE_FILE} NAME_WE)
+        add_executable(${EXE_NAME} ${SOURCE_FILE})
+        target_include_directories(${EXE_NAME} INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/src")
+        target_link_libraries(${EXE_NAME} ${PROJECT_NAME})
+    endforeach()
+endif()
